2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/HP-Color_LaserJet_9500_MFP.xml: Fixed typo in model
	name which prevented this PPD being accessible.

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/HP-LaserJet_4345_MFP.xml: Fixed typo in model name
	which prevented this PPD being accessible (RH bug #459847).

2008-08-28  Dafydd Crosby <dcrosby@userful.com>
	* PPD/Oce/Others: Moved Oce-cm2520.ppd to non-free repository.

2008-08-20  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/GS-HalftoningAlgorithm-Gray.xml, driver/deskjet.xml,
	  driver/dj505j.xml, driver/djet500.xml, driver/gdi.xml,
	  driver/hl1250.xml, driver/hl7x0.xml, driver/laserjet.xml,
	  driver/lj4dith.xml, driver/ljet2p.xml, driver/ljet3.xml,
	  driver/ljet3d.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljetplus.xml, driver/oki4w.xml: Made Halftoning option
	  work with PDF input files.

	* driver/hl7x0.xml: Added Ghostscript command line also with
	  <prototype_pdf> tag, so that for this driver also PDF input is
	  accepted.

	* opt/126.xml, opt/2.xml, opt/6.xml, opt/PageSize-A4only.xml,
	  opt/gdi-PageSizePS.xml, opt/jap-PageSize.xml,
	  opt/jap-Resolution.xml, opt/largeformat-PageSize.xml,
	  opt/oki4w-PageSize.xml, opt/10.xml, opt/128.xml opt/129.xml,
	  opt/130.xml, opt/213.xml, opt/5.xml, opt/7.xml, opt/8.xml,
	  opt/9.xml, opt/GS-HalftoningAlgorithm-Gray.xml: Converted
	  PostScript-code based options to Ghostscript-command-line-based
	  versions, so that they can be also used when Ghostscript is fed
	  with PDF as input format.

	* opt/192.xml: Removed. This option had neither constraints nor
	  choices, so it did not make any sense.

2008-08-20  AVASYS Corporation <pipsnews@avasys.jp>

	* added the EPSON LP-S7500.

2008-08-12  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/driver/pxlmono.xml: Added HP LaserJet 1320 (Ubuntu bug
	  #172550).

	* printer/Okidata-B2200n.xml, printer/Okidata-B2200.xml,
	  printer/Okidata-B2400n.xml, printer/Okidata-B2400.xml,