@@ -24,7 +24,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <commandset>PJL,HBP</commandset>
+      <description></description>
+      <manufacturer>Brother</manufacturer>
+      <model>HL-2040 series</model>
+    </usb>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hl1250</driver><!--verified--><!--affiliate keys; modify and face my wrath!-->
   <buyit>buy:5887,cfs:8026</buyit><!--no "contrib_url"-->
