@@ -1,5 +1,10 @@
 2008-09-02  Tim Waugh <twaugh@redhat.com>
 
+	* printer/Brother-HL-2060.xml: Fixed typo in model name which
+	prevented this PPD being accessible.
+
+2008-09-02  Tim Waugh <twaugh@redhat.com>
+
 	* printer/HP-Color_LaserJet_9500_MFP.xml: Fixed typo in model
 	name which prevented this PPD being accessible.
 
